--- a/Project2/style.css
+++ b/Project2/style.css
@@ -1,1 +1,251 @@
 
+body {
+  background-color:#996633;
+  color: white;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 17px;
+  padding: 15px;
+  background-image:url("bakery/img/bakeee.jpg");
+  position:absolute;
+  background-repeat: no-repeat;
+  background-size: cover;
+  font-style: bold;
+ 
+}
+
+.container {
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.main-content{
+  background-color:navajowhite;
+}
+
+header {
+	justify-content: space-evenly;
+	display: flex;
+	width: 100%;
+	height: 10vh;
+	align-items: center;
+	background-color: gray;
+	
+}
+.logo-container,
+.nav-links{
+	display: flex;
+}
+
+.logo-container {
+	flex: 1;
+
+}
+.logo {
+	font-weight: 600;
+	font-size: 23px;
+	margin: 5px;
+}
+nav {
+	flex: 2;
+}
+.nav-links {
+	justify-content: space-around;
+	list-style: none;
+	
+}
+
+.nav-link {
+	color:white;
+	font-size: 22px;
+	text-decoration: none;
+}
+.nav-link:hover{
+	color:black;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding:0 ;
+}
+li {
+  float: left;
+}
+.presentation {
+	display: flex;
+	width: 90%;
+	margin: auto;
+	min-height: 90vh;
+	align-items: center;
+	color:white;
+}
+.introduction {
+	flex: 1;
+}
+
+.intro-text h1 {
+	font-size: 44px;
+	font-weight: 500;
+	background: linear-gradient(to right, #630e1f, #5ea32f);
+}
+.intro-text p {
+	margin-top: 5px;
+	font-size: 22px;
+	color:navy;
+  background: #e5e8ed;
+  font-style: bold;
+}
+.cover {
+	flex: 1;
+	display: flex;
+	justify-content: right;
+	height: 80vh;
+	 
+}
+
+.cover img {
+	height: 100%;
+	width:50%;
+	filter: drop-shadow(0px 10px 6px rgb(18, 20, 44));
+	animation: drop 1.5s ease;
+	justify-content: right;
+}
+.main-content { 
+	background-color: #3a4a58;
+  color: #8c8c8c;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;    
+  font-size: 17px;
+  padding: 15px;
+	background-color:#bdcebe;
+ }
+   
+
+.text-white { color: rgb(253, 253, 253); }
+
+.page-header-container { text-align: center; }
+
+.page-header {
+  display: inline-block;
+  vertical-align: baseline;
+  margin-top: 20px;
+  margin-bottom: 35px;
+  font-size: 2.1rem;
+  font-weight: 400;
+}
+ 
+.section-header {
+  color: #996633;
+  text-align: center;
+  font-weight: 400;
+  font-size: 1.5rem;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+.cookie {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0px;
+}
+	 
+td {
+  text-align: center;
+  padding: 10px 15px;
+}
+
+.text-left { text-align: left; }
+ 
+th {
+  color: #333333;
+  font-weight: 400;
+  font-size: 1.2rem;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+tr:nth-child(odd) { background-color: #e5e8ed; }
+
+tr.tr-header {
+  background-color: #c4cdd6;
+  height: 50px;
+}
+ 
+.section {
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 30px;
+}
+
+.section-small {
+  max-width: 490px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0;
+}
+
+p {
+  font-size: 1rem;
+  line-height: 1.7;
+}
+
+.mb-0 { margin-bottom: 0; }
+img {
+   max-width: 100%; 
+  }
+figure { margin: 0; }
+figcaption { text-align: center; }
+
+figcaption span {
+  display: block;
+  color: #757575;
+  font-size: 18px;
+}
+ 
+.item-name {
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+  
+.special-items {
+  display: flex;
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.special-item {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+   
+hr {
+  width: 60%;
+  border: 0.5px solid #ccc;
+}
+
+.contact-link {
+  color: #d8d7d7;
+  font-weight: 600;
+  text-decoration: none;
+}
+
+a { transition: all 0.3s ease; }
+.contact-link:hover { color: #000000; }
+
+.footer-text {
+  font-size: 0.9rem;
+  margin-top: 30px;
+  margin-bottom: 10px;
+  text-align: center;
+  background-color: black;
+  color: white;
+}
+@media screen and (min-width: 800px) {
+  .container {
+    margin: 1em 2em;
+  }
+}
